# mitsuba3-wave

./: CMakeLists.txt  configure.bat
include/mitsuba/core/: bouncebuffer.h  fwd.h  math.h
include/mitsuba/plt/: diffractionGrating.h  fwd.h  plt.h
include/mitsuba/python/: docstr.h  python.h
include/mitsuba/render/: bouncebuffer.h  bsdf.h  fwd.h  interference.h
scenes/gratings/: gratings.exr  gratings.xml
scenes/gratings/meshes/: Plane.ply  Plane_001.ply  Plane_002.ply  Plane_003.ply
scripts/dispersion/: main.py  utils.py
scripts/playground/: gradiance.py
src/: CMakeLists.txt
src/bsdfs/: CMakeLists.txt  diffuse.cpp  grating_conductor.cpp
src/integrators/: CMakeLists.txt  wavepath.cpp
src/plt/: CMakeLists.txt
src/plt/python/: CMakeLists.txt  plt.cpp  plt_v.cpp
src/python/: CMakeLists.txt  main_v.cpp
src/render/: bsdf.cpp
src/render/python/: bsdf_v.cpp
